--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue": "^2.1.3",
-    "vue-loader": "^10.0.2",
-    "vue-template-compiler": "^2.1.3",
+    "vue": "^2.1.10",
+    "vue-loader": "^11.0.0",
+    "vue-template-compiler": "^2.1.10",
+    "vuex": "^2.1.2",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
     "yaml-loader": "^0.4.0"
